<resources>
    <string name="app_name">FinalProject</string>

    <string name="SystemDialogTitle">! ! ! 提示 ! ! !</string>
    <string name="SystemDialogO">確定</string>
    <string name="SystemDialogX">取消</string>

    <!--    opening page String-->
    <string name="op_startAppButtonText">start</string>

<!--    login page String-->
    <string name="login_submitButtonText">log in</string>
    <string name="login_emailHintText">email</string>
    <string name="login_passwordHintText">password</string>

<!--    main page String-->
    <string name="main_menu_1">Note</string>
    <string name="main_menu_2">Account</string>
    <string name="main_menu_3">Home</string>
    <string name="main_menu_4">Chart</string>
    <string name="main_menu_5">Setting</string>

    <string name="main_dialog_finishapp">確定要離開了嗎 ( ˘･з･) ?</string>
    <string name="main_dialog_finishappOK">不要</string>
    <string name="main_dialog_finishappNO">當然不要啊</string>
    <string name="main_dialog_finishappT">決定給我100分了嗎 ( ˘･з･) ?\n(我是謝妤婕 學號是110816032 )</string>
    <string name="main_dialog_finishappOKT">好</string>
    <string name="main_dialog_finishappNOT">當然好啊</string>

<!--     page-->
    <!--    home主頁-->
    <string name="home_keepBookText">收支本本</string>
    <string name="home_transBookText">轉帳本本</string>
    <string name="home_calendarText">日曆本本</string>
    <!--    add 新增記帳紀錄-->
    <string name="home_add_submitText">記一筆!</string>
    <string name="home_add_dateText">日期</string>
    <string name="home_add_typeText">類型</string>
    <string name="home_add_incomeText">收入</string>
    <string name="home_add_expendText">支出</string>
    <string name="home_add_transText">轉帳</string>
    <string name="home_add_moneyText">金額</string>
    <string name="home_add_accountSingleText">帳戶</string>
    <string name="home_add_classificationText">分類</string>
    <string name="home_add_memberText">對象</string>
    <string name="home_add_accountStartText">從帳戶</string>
    <string name="home_add_accountEndText">到帳戶</string>
    <string name="home_add_init_date">(選擇)</string>
    <string name="home_add_init_cal">(計算)</string>
    <string name="home_add_init_ac">現金</string>
    <string name="home_add_init_class">其他</string>
    <string name="home_add_init_member">其他</string>
    <string name="home_add_formMsg">輸入有誤 QAQ</string>
    <!--    calculator String-->
    <string name="cal_initResult">0.0</string>
    <string name="cal_initSign"> </string>
    <string name="cal_summitButtonText">確認</string>
    <string name="cal_msg_resultLengthToLong">計算上限為十位數以內</string>
    <string name="cal_msg_resultNumberUnderZero">數字需為正數</string>
    <string name="cal_errorSolve_msg">有點不對勁QAQ\n已清除計算紀錄</string>
    <string name="cal_numberOverflow_msg">數目不得小於零或大於一百萬</string>
    <!--    bookkeeping 記帳履歷-->
    <string name="home_bookkeepingAction_ViewText">詳細</string>
    <string name="home_bookkeepingAction_EditText">編輯</string>
    <string name="home_bookkeepingAction_DelText">刪除</string>
    <string name="delItemAlertText">確定要刪除嗎?\n</string>
    <string name="delItemAlertOK">確定</string>
    <string name="delItemAlertNO">取消</string>
    <!--    bookkeeping 記帳履歷(收支)-->
    <string name="home_bookkeepingItem_accountText">帳戶&#160;:&#160;</string>
    <string name="home_bookkeepingItem_memberText">對象&#160;:&#160;</string>
    <string name="home_bookkeepingItem_dateDefaultText">(YYYY-MM-DD)</string>
    <string name="home_bookkeepingItem_classDefaultText">(分類)</string>
    <string name="home_bookkeepingItem_moneyDefaultText">(金額)</string>
    <string name="home_bookkeepingItem_accountDefaultText">(帳戶)</string>
    <string name="home_bookkeepingItem_memberDefaultText">(對象)</string>
    <string name="home_bookkeepingItem_memoDefaultText">尚無內容。</string>
    <!--    bookkeeping 記帳履歷(轉帳)-->
    <string name="home_bookkeepingTransItem_transText">轉帳至&#160;</string>
    <string name="home_bookkeepingTransItem_dateDefaultText">(YYYY-MM-DD)</string>
    <string name="home_bookkeepingTransItem_acStartDefaultText">(來源帳戶)</string>
    <string name="home_bookkeepingTransItem_moneyDefaultText">(金額)</string>
    <string name="home_bookkeepingTransItem_acEndDefaultText">(目標帳戶)</string>
    <string name="home_bookkeepingTransItem_memoDefaultText">尚無內容。</string>


<!--    account page-->
    <!--    account主頁-->
    <string name="account_initCoin">TWD</string>
    <string name="account_initSubCoin">TWD(負債)</string>
    <string name="account_initNetAssets">0.0</string>
    <string name="account_netAssetsText">淨資產</string>
    <string name="account_initDataNumber">0.0</string>
    <string name="account_allAssetsText">總資產</string>
    <string name="account_debtText">負債</string>
    <string name="account_initAssetsText">初始餘額</string>
    <string name="account_accountListText">帳戶清單</string>
    <string name="init_account_money_text">現金</string>
    <string name="init_account_bank_text">銀行</string>
    <string name="init_account_card_text">信用卡</string>
    <!--    編輯初始dialog-->
    <string name="account_editInitAccountNumberText">編輯初始餘額</string>
    <string name="account_editInitAccountNumber_submitButtonText">確定</string>
    <string name="account_editInit_card_text">信用卡(負債)</string>

<!--    chart page-->
    <string name="chart_moneyEnd">元</string>
    <string name="chart_historyTitle_exTopMember">累計最高支出對象</string>
    <string name="chart_historyTitle_exTopType">累計最高支出項目</string>
    <string name="chart_historyTitle_inTopMember">累計最高收入對象</string>
    <string name="chart_historyTitle_inTopType">累計最高收入項目</string>

<!--    setting page-->

    <string name="setting_basic">基本設定</string>
    <string name="setting_menuFixedIncomeText">固定收支</string>
    <string name="setting_menuFixedTransferText">固定轉帳</string>
    <string name="setting_menuClassificationText">編輯記帳類別</string>
    <string name="setting_menuMemberText">編輯記帳對象</string>
    <string name="setting_backup">資料備份</string>
    <string name="setting_menuUpdateCloud">上傳雲端</string>
    <string name="setting_menuOutputCSV">匯出CSV檔</string>
    <string name="setting_help">幫助</string>
    <string name="setting_menuRecommend">建議與希望</string>
    <string name="setting_menuFindDev">傳送資料給開發者</string>
    <string name="setting_menuAboutApp">關於本App</string>
    <string name="setting_menuAcknowledgments">版權聲明</string>

    <string name="setting_defaultPageTitle">*ଘ(੭*ˊᵕˋ)੭* ੈ✩‧₊˚</string>
    <string name="setting_defaultPageText">功能開發中，敬請期待</string>

    <!--    setting recommend-->
    <string name="setting_menuRecommend_typeText">類型</string>
    <string name="settingRecommend_type_QnAText">諮詢</string>
    <string name="settingRecommend_type_recommendText">建議</string>
    <string name="settingRecommend_type_bugRepoText">BUG回報</string>
    <string name="settingRecommend_type_otherText">其他</string>
    <string name="setting_menuRecommend_textText">敘述</string>
    <string name="setting_menuRecommend_addImageText">上傳圖片</string>
    <string name="setting_menuRecommend_submitText">提交</string>
    <!--    find dev-->
    <string name="settingFindDev_getInfo">裝置資訊</string>
    <string name="settingFindDev_getInfo_msg">無法取得手機資訊</string>
    <!--    other-->
    <string name="setting_menuAcknowledgments_CodeSource">*ଘ(੭*ˊᵕˋ)੭* ੈ✩‧₊˚Author&#160;</string>
    <string name="setting_menuAcknowledgments_GithubName">JessieOuO</string>
    <string name="setting_menuAcknowledgments_CodeSource_">&#160;✿</string>
    <string name="setting_menuAcknowledgments_IconSource">Icons made by&#160;</string>
    <string name="setting_menuAcknowledgments_IconSourceName">Flaticon</string>
    <string name="setting_menuAcknowledgments_IconSource_">&#160;.</string>
    <string name="setting_menuAcknowledgments_Copyright">Copyright © 2021 jessieOuO. All rights reserved.</string>

<!--    default-->

    <!--    classification ex-->
    <string name="typeNameText_ex_food">飲食</string>
    <string name="typeNameText_ex_clothes">服裝配件</string>
    <string name="typeNameText_ex_houserent">房租</string>
    <string name="typeNameText_ex_trafic">交通</string>
    <string name="typeNameText_ex_education">教育</string>
    <string name="typeNameText_ex_game">娛樂</string>
    <string name="typeNameText_ex_medicine">醫療保健</string>
    <string name="typeNameText_ex_social">社交應酬</string>
    <string name="typeNameText_ex_phone">手機網路</string>
    <string name="typeNameText_ex_invest">投資</string>
    <string name="typeNameText_ex_daily">日常用品</string>
    <string name="typeNameText_ex_pet">寵物</string>
    <string name="typeNameText_ex_car">車車保養</string>
    <string name="typeNameText_ex_donate">捐款</string>
    <string name="typeNameText_ex_other">其他</string>

    <!--    classification in-->
    <string name="typeNameText_in_work">薪水</string>
    <string name="typeNameText_in_bonus">獎金</string>
    <string name="typeNameText_in_invest">投資獲利</string>
    <string name="typeNameText_in_interest">銀行利息</string>
    <string name="typeNameText_in_donate">他人施捨</string>
    <string name="typeNameText_in_other">其他</string>

    <!--    member-->
    <string name="memberName_self">自己</string>
    <string name="memberName_parent">父母</string>
    <string name="memberName_child">小孩</string>
    <string name="memberName_all">全員</string>
    <string name="memberName_woman">老婆♥</string>
    <string name="memberName_other">其他</string>




</resources>