<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_note"
        android:title="@string/main_menu_1"
        android:icon="@drawable/icon_mainbar_books"/>
    <item
        android:id="@+id/nav_account"
        android:title="@string/main_menu_2"
        android:icon="@drawable/icon_mainbar_bank"/>
    <item
        android:id="@+id/nav_home"
        android:title="@string/main_menu_3"
        android:icon="@drawable/icon_mainbar_home"/>
    <item
        android:id="@+id/nav_chart"
        android:title="@string/main_menu_4"
        android:icon="@drawable/icon_mainbar_chart"/>
    <item
        android:id="@+id/nav_setting"
        android:title="@string/main_menu_5"
        android:icon="@drawable/icon_mainbar_settings"/>

</menu>