<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/alertDialogBackgroundColor"
    android:layout_margin="@dimen/alertdialog_dialogMargin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/alertdialog_titleHeight"
        android:gravity="center"
        android:background="@color/alertDialogTitleBackgroundColor"
        android:textColor="@color/alertDialogTitleTextColor"
        android:text="@string/account_editInitAccountNumberText"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alertdialog_editTextMarginTop"
        android:layout_marginHorizontal="@dimen/alertdialog_editTextMarginHorizontal"
        app:boxBackgroundColor="@color/EditTextBackgroundColor"
        android:inputType="number"
        android:hint="@string/init_account_money_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_initAccountMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alertdialog_editTextMarginTop"
        android:layout_marginHorizontal="@dimen/alertdialog_editTextMarginHorizontal"
        app:boxBackgroundColor="@color/EditTextBackgroundColor"
        android:inputType="number"
        android:hint="@string/init_account_bank_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_initAccountBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alertdialog_editTextMarginTop"
        android:layout_marginHorizontal="@dimen/alertdialog_editTextMarginHorizontal"
        app:boxBackgroundColor="@color/EditTextBackgroundColor"
        android:inputType="number"
        android:hint="@string/init_account_card_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_initAccountCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_initAccountCardSubmitButton"
        android:layout_width="@dimen/alertdialog_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/alertdialog_editTextMarginHorizontal"
        android:backgroundTint="@color/alertDialogTitleBackgroundColor"
        android:textColor="@color/alertDialogTitleTextColor"
        android:text="@string/account_editInitAccountNumber_submitButtonText"/>

</LinearLayout>